# chiyocore-builder

./: .gitignore  Cargo.toml  README.md
blossoms/boards/: e22p-test.toml  heltecv4.toml  xiao-s3-kit.toml
blossoms/setups/: sample.toml
res/: base_crate.toml  build.rs  partitions.csv  template.rs
src/: board_def.rs  config.rs  gen_cargo_conf.rs  gen_cargo_toml.rs  gen_main.rs  main.rs
