[package]
name = "chiyocore-builder"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
cargo_toml = "0.22.3"
clap = { version = "4.6.0", features = ["derive"] }
genco = "0.19.0"
litemap = { version = "0.8.2", features = ["serde"] }
meshcore = { git = "https://github.com/kore-signet/meshcore", version = "0.1.0", default-features = false }
rust-format = "0.3.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"

